--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.20.0",
     "mongoose": "^8.6.2",
     "multer": "^1.4.5-lts.1",
